[package]
name = "psnet"
version = "1.0.0"
edition = "2021"
description = "A beautiful real-time TUI network monitor for Windows — 9 tabs, GeoIP, device discovery, firewall, topology & more"
license = "MIT"
repository = "https://github.com/marlocarlo/psnet"
homepage = "https://github.com/marlocarlo/psnet"
readme = "README.md"
keywords = ["network", "monitor", "tui", "windows", "terminal"]
categories = ["command-line-utilities", "network-programming"]
exclude = [".github/", "choco/", "target/", "image.png", ".playwright-mcp/"]

[dependencies]
ratatui = "0.29"
crossterm = "0.28"
sysinfo = "0.32"
chrono = "0.4"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
dirs = "5"
maxminddb = "0.24"
dns-lookup = "2"

[target.'cfg(windows)'.dependencies]
windows-sys = { version = "0.59", features = [
    "Win32_Foundation",
    "Win32_NetworkManagement_IpHelper",
    "Win32_NetworkManagement_Ndis",
    "Win32_Networking_WinSock",
] }

[profile.release]
opt-level = 3
lto = true
codegen-units = 1
strip = true
